# urdf-rs

./: .travis.yml  Cargo.toml  README.md  sample.urdf
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
samples/: minimal.sdf  sample.urdf
src/: deserialize.rs  errors.rs  funcs.rs  lib.rs  ros_utils.rs  sdf.rs  urdf.rs  utils.rs
src/common/: elements.rs  mod.rs  space_seperated_vectors.rs
src/sdf/: deserialize.rs  funcs.rs
src/urdf/: deserialize.rs  funcs.rs
