[package]
name = "urdf-rs"
version = "0.9.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2021"
description = "URDF parser"
license = "Apache-2.0"
keywords = ["robotics", "robot", "ros", "urdf"]
categories = ["data-structures", "parsing"]
repository = "https://github.com/openrr/urdf-rs"

# Note: serde is public dependency.
[dependencies]
quick-xml = { version = "0.37", features = ["overlapped-lists", "serialize"] }
regex = "1.4.2"
RustyXML = "0.3.0"
serde = { version = "1.0.118", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "1.0.7"

[dev-dependencies]
assert_approx_eq = "1"

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
[workspace.lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920
